test/spec_vectors/load/fail/module_20.wat
(module (memory 1) (func $load8_s_i64 (i64.load8_s (i32.const 0))))